--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ before_install:
 install:
 script: pytest # run tests
 after_success:
+notifications:
+ email:
+  on_success: always
+  on_failure: always
