--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ install:
 script: 
   - pytest # run tests
   - docker build -t bruno9817/ci_challenge .
-#  - docker tag bruno9817/ci_challenge
-#registry.heroku.com/$HEROKUAPPNAME/web
+  - docker tag bruno9817/ci_challenge registry.heroku.com/$HEROKUAPPNAME/web
 
 after_success:
 
