--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ deploy:
   script:
     docker push bruno9817/ci_challenge;
     docker push registry.heroku.com/$HEROKUAPPNAME/web;
+    heroku container:release web --app $HEROKUAPPNAME
   on:
     all_branches: true
 
