Test shedule workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,3 +79,11 @@ workflows:
             branches:
               only:
                 - main
+    #Add cron job
+    triggers:
+      - schedule:
+        cron: "15 * * * *"
+        filters:
+          branches:
+            only:
+              - main
