--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,10 +80,10 @@ workflows:
               only:
                 - main
     #Add cron job
-    triggers:
-      - schedule:
-          cron: "15 * * * *"
-          filters:
-            branches:
-              only:
-                - main
+    #triggers:
+    #  - schedule:
+    #      cron: "15 * * * *"
+    #      filters:
+    #        branches:
+    #          only:
+    #            - main
